--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8486a3">  <td>21/11/28 11:26:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DPTest.LuanchBrowser()[pri:0, instance:Demo.Demo.DPTest@66d1af89]">&gt;&gt;LuanchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1176735295</td>   <td></td> </tr>
-<tr bgcolor="8486a3">  <td>21/11/28 11:26:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DPTest.LuanchBrowser()[pri:0, instance:Demo.Demo.DPTest@66d1af89]">&gt;&gt;LuanchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1176735295</td>   <td></td> </tr>
-<tr bgcolor="8486a3">  <td>21/11/28 11:27:14</td>   <td>15257</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DPTest.loginTest(java.lang.String,java.lang.String)[pri:0, instance:Demo.Demo.DPTest@66d1af89]">loginTest</td> 
-  <td>main@1176735295</td>   <td></td> </tr>
-<tr bgcolor="8486a3">  <td>21/11/28 11:27:14</td>   <td>15257</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DPTest.loginTest(java.lang.String,java.lang.String)[pri:0, instance:Demo.Demo.DPTest@66d1af89]">loginTest</td> 
-  <td>main@1176735295</td>   <td></td> </tr>
-<tr bgcolor="8486a3">  <td>21/11/28 11:27:22</td>   <td>23355</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DPTest.tearDown()[pri:0, instance:Demo.Demo.DPTest@66d1af89]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1176735295</td>   <td></td> </tr>
-<tr bgcolor="8486a3">  <td>21/11/28 11:27:22</td>   <td>23355</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DPTest.tearDown()[pri:0, instance:Demo.Demo.DPTest@66d1af89]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1176735295</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>21/12/26 11:02:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowserStackDemo.startDriver()[pri:0, instance:Grid.BrowserStackDemo@1d7acb34]">startDriver</td> 
+  <td>main@2075495587</td>   <td></td> </tr>
 </table>
